--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
    "require":{
         "phpmailer/phpmailer": "5.2.9",
          "smarty/smarty": "3.1.20",
-         "setasign/fpdf": "1.8"
+         "setasign/fpdf": "1.8",
+         "deviservi/nusoap":"dev-master"
    }
 }
